--- a/index.html
+++ b/index.html
@@ -2,60 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="veiwport" content="width=device-width,initial-scale=1.0">
-  <title>J-Tube</title>
+  <title>
+    THIS IS TEXT
+  </title>
   <style>
-  #header{ 
-    font-family:calibri;
-    font-size:50px;
-    background:#4285F4;
-    width: 450px;
-    border-radius:50px;
-  }
-  
-  #hai1{
-    width:50px;
-    position:absolute;
-    top: 200px;
-  }
-  
-  #hai2{
-    position:absolute;
-    top: 200px;
-    left:250px;
-  }
-  
-  #hai3{
-    position:absolute;
-    top: 200px;
-    left:490px;
-  }
-  #hai4{
-    position:absolute;
-    top:350px;
+  #something{
+   font-size:100px;
+   background: linear-gradient(to right, #39ff14, #00ffff);
+    -webkit-text-fill-color: transparent; 
+    -webkit-background-clip: text; 
   }
   </style>
 </head>
 <body>
 <center>
-  <div id = header>J-Tube</div>
+ <p id="something">
+  THIS IS TEXT
+  </p>
 </center>
-<div id=hai1>
-  <iframe width="200" height="100" src="https://www.youtube.com/embed/xaZ6xXzwnfY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-<div id=hai2>
-<iframe width="200" height="100" src="https://www.youtube.com/embed/9nP0ot-gnso" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-
-<div id=hai3>
-<iframe width="200" height="100" src="https://www.youtube.com/embed/QrylYsDWkec" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-<div id=hai4>
-  
-  <iframe width="200" height="100" src="https://www.youtube.com/embed/FACvokb51Sw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-  <script>
-  //console.log(hai1.left)
-  </script>
+ 
 </body>
 </html>
